[package]
name = "kokai"
version = "0.2.0"
authors = ["Jones Magloire @Joxit"]
description = "Create changelog for your releases and full changelog for your projects using Conventional Commits."
edition = "2018"
license = "MIT"
repository = "https://github.com/Joxit/kokai"
homepage = "https://github.com/Joxit/kokai"
documentation = "https://docs.rs/kokai/"
readme = "README.md"
keywords = ["cli", "release", "changelog", "git", "conventional-commits"]
categories = ["command-line-utilities"]

[[bin]]
name = "kokai"
path = "src/main.rs"

[dependencies]
structopt = "^0.3"
regex = "^1.3"
lazy_static = "^1.4"
chrono = "^0.4"

[dependencies.git2]
version = "^0.13"
features = ["vendored-openssl"]
